--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@ function mostrarFormulario(tipo) {
           <option value="USD">Dólares</option>
         </select>
       </label>
-      
+
       <label>Monto pagado en Pesos (ARS):
         <input class="border p-2 rounded w-full" type="number" id="monto-pesos" min="0" step="0.01" value="0">
       </label>
@@ -246,7 +246,8 @@ function mostrarFormulario(tipo) {
           const data = Object.values(snapshot.val())[0];
           modeloSpan.textContent = data.modelo;
           colorSpan.textContent = data.color;
-          
+          precioBaseARS = parseFloat(data.precioVenta) || 0; // Aquí asignas precioBaseARS correctamente
+          precioBaseUSD = parseFloat(data.precioVentaUSD) || 0;
           precioSpanARS.textContent = precioBaseARS.toFixed(2);
           precioSpanUSD.textContent = precioBaseUSD.toFixed(2);
           finalSpan.textContent = precioBaseARS.toFixed(2); // Actualiza el precio final con precioBaseARS
