--- a/index.html
+++ b/index.html
@@ -242,27 +242,42 @@ function mostrarFormulario(tipo) {
     let precioBaseARS = 0;
     let precioBaseUSD = 0;
 
-    imeiInput.addEventListener('blur', () => {
-      const imei = imeiInput.value.trim();
-      if (!imei) return;
+    let imeiTimeout;
 
-      db.ref('mercaderia').orderByChild('imei').equalTo(imei).once('value', snapshot => {
-        if (snapshot.exists()) {
-          const data = Object.values(snapshot.val())[0];
-          modeloSpan.textContent = data.modelo;
-          colorSpan.textContent = data.color;
-          precioBaseARS = parseFloat(data.precioVenta) || 0;
-          precioBaseUSD = parseFloat(data.precioVentaUSD) || 0;
-          precioSpanARS.textContent = precioBaseARS.toFixed(2);
-          precioSpanUSD.textContent = precioBaseUSD.toFixed(2);
-          finalSpan.textContent = precioBaseARS.toFixed(2);
-          datosCelular.classList.remove('hidden');
-        } else {
-          alert('IMEI no encontrado en la base de mercadería');
-          datosCelular.classList.add('hidden');
-        }
-      });
+imeiInput.addEventListener('input', () => {
+  clearTimeout(imeiTimeout);
+
+  imeiTimeout = setTimeout(() => {
+    const imei = imeiInput.value.trim();
+    if (!imei) {
+      datosCelular.classList.add('hidden');
+      return;
+    }
+
+    db.ref('mercaderia').orderByChild('imei').equalTo(imei).once('value', snapshot => {
+      if (snapshot.exists()) {
+        const data = Object.values(snapshot.val())[0];
+        modeloSpan.textContent = data.modelo;
+        colorSpan.textContent = data.color;
+        precioBaseARS = parseFloat(data.precioVenta) || 0;
+        precioBaseUSD = parseFloat(data.precioVentaUSD) || 0;
+        precioSpanARS.textContent = precioBaseARS.toFixed(2);
+        precioSpanUSD.textContent = precioBaseUSD.toFixed(2);
+
+        // Mostrar precio final con bonificación actual (si hay)
+        const bonif = parseFloat(bonificacionInput.value) || 0;
+        const moneda = document.getElementById('moneda').value;
+        const base = moneda === 'USD' ? precioBaseUSD : precioBaseARS;
+        const final = base - (base * bonif / 100);
+        finalSpan.textContent = final.toFixed(2);
+
+        datosCelular.classList.remove('hidden');
+      } else {
+        datosCelular.classList.add('hidden');
+      }
     });
+  }, 300); // Espera 300ms desde la última tecla
+});
 
     bonificacionInput.addEventListener('input', () => {
       const bonif = parseFloat(bonificacionInput.value) || 0;
