--- a/index.html
+++ b/index.html
@@ -254,29 +254,38 @@ imeiInput.addEventListener('input', () => {
       return;
     }
 
-    db.ref('mercaderia').orderByChild('imei').equalTo(imei).once('value', snapshot => {
-      if (snapshot.exists()) {
-        const data = Object.values(snapshot.val())[0];
-        modeloSpan.textContent = data.modelo;
-        colorSpan.textContent = data.color;
-        precioBaseARS = parseFloat(data.precioVenta) || 0;
-        precioBaseUSD = parseFloat(data.precioVentaUSD) || 0;
-        precioSpanARS.textContent = precioBaseARS.toFixed(2);
-        precioSpanUSD.textContent = precioBaseUSD.toFixed(2);
+    db.ref('mercaderia')
+      .orderByChild('imei')
+      .equalTo(imei)
+      .once('value')
+      .then(snapshot => {
+        if (snapshot.exists()) {
+          const data = Object.values(snapshot.val())[0];
 
-        // Mostrar precio final con bonificación actual (si hay)
-        const bonif = parseFloat(bonificacionInput.value) || 0;
-        const moneda = document.getElementById('moneda').value;
-        const base = moneda === 'USD' ? precioBaseUSD : precioBaseARS;
-        const final = base - (base * bonif / 100);
-        finalSpan.textContent = final.toFixed(2);
+          modeloSpan.textContent = data.modelo || '';
+          colorSpan.textContent = data.color || '';
+          precioBaseARS = parseFloat(data.precioVenta) || 0;
+          precioBaseUSD = parseFloat(data.precioVentaUSD) || 0;
+          precioSpanARS.textContent = precioBaseARS.toFixed(2);
+          precioSpanUSD.textContent = precioBaseUSD.toFixed(2);
 
-        datosCelular.classList.remove('hidden');
-      } else {
+          // Calcular precio final con bonificación
+          const bonif = parseFloat(bonificacionInput.value) || 0;
+          const moneda = document.getElementById('moneda').value;
+          const base = moneda === 'USD' ? precioBaseUSD : precioBaseARS;
+          const final = base - (base * bonif / 100);
+          finalSpan.textContent = final.toFixed(2);
+
+          datosCelular.classList.remove('hidden');
+        } else {
+          datosCelular.classList.add('hidden');
+        }
+      })
+      .catch(err => {
+        console.error('Error al buscar IMEI:', err);
         datosCelular.classList.add('hidden');
-      }
-    });
-  }, 300); // Espera 300ms desde la última tecla
+      });
+  }, 300); // Espera 300ms para evitar múltiples consultas rápidas
 });
 
     bonificacionInput.addEventListener('input', () => {
